--- a/PRUEBA2.HTML
+++ b/PRUEBA2.HTML
@@ -46,7 +46,7 @@
     <section id="sobre-nosotros">
         <div class="img-container" data-aos="zoom-in-left" id="sn">
         <h2>Sobre <span class="color-acento">Nosotros</span></h2>
-        <p>BONAIR ES UNA EMPRESA DE AVIACION EJECUTIVA DISEÑADA PARA BRINDAR UN SERVICIO UNICO.</br>DISPONIBILIDAD CONTINUA, NO IMPORTA QUE DIA Y HORARIO NOS NECESITES. AHI ESTAREMOS!</br>NOS ENFOCAMOS EN CADA DETALLE PARA GARANTIZARLE SU MEJOR EXPERIENCIA.</p>
+        <p>BONAIR ES UNA EMPRESA DE AVIACION EJECUTIVA DISEÑADA PARA BRINDAR UN SERVICIO UNICO.</br>DISPONIBILIDAD CONTINUA, NO IMPORTA QUE DIA Y HORARIO NOS NECESITES. AHI ESTAREMOS!</br>NOS ENFOCAMOS EN CADA DETALLE PARA GARANTIZARLE SU MEJOR EXPERIENCIA</p>
     </div>
     </section>
 
@@ -56,7 +56,7 @@
         <div class="img-container" data-aos="zoom-in-right" id="nf">
             <h2>Nuestra <span class="color-acento">Aeronave</span></h2>
             <h3>TECNAM P2006</h3>
-                <p>LIGHT TWIN</br>ORIGEN ITALIANO</br>MODELO 2022</br>POTENCIA 200HP</br>VELOCIDAD MAXIMA 269 KM/H</br>MAXIMO RANGO 1204KM</br>CARGA MAXIMA 411KG</br>CONFIGURACION PREMIUM PARA SU MAYOR CONFORT</br> MAXIMO 3 PASAJEROS</p>
+                <p>LIGHT TWIN</br>ORIGEN ITALIANO</br>MODELO 2022</br>POTENCIA 200HP</br>VELOCIDAD MAXIMA 269 KM/H</br>MAXIMO RANGO 1204KM</br>CARGA MAXIMA 411KG</br>CONFIGURACION PREMIUM PARA SU MAYOR CONFORT</br>MAXIMO 3 PASAJEROS</p>
         </div> 
         </section>
 
@@ -122,11 +122,6 @@
     <div id="button-up">
         <i class="fa-solid fa-circle-arrow-up"></i>
     </div>
-    <footer>
-        <div class="contenedor">
-            <p>&copy; Bonair 2022</p>
-        </div>
-    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://kit.fontawesome.com/41bcea2ae3.js" crossorigin="anonymous"></script>
