--- a/PRUEBA2.HTML
+++ b/PRUEBA2.HTML
@@ -94,7 +94,7 @@
                             <input type="usuario" id="usuario" name="usuario" required="true"/>
                         </div>
                         <div class="elemento">
-                            <label for="number">Telefono</label>
+                            <label for="number">Teléfono</label>
                             <input type="number" id="number" name="number" required="true"/>
                         </div>
                         <div class="elemento">
@@ -103,7 +103,7 @@
                         </div></br>
                         <div class="elemento">
                             <h6 id="titulo"></h6>
-                            <button id="boton"  onclick="document.getElementById('titulo').innerHTML= tilde">Enviar</button>
+                            <button id="boton"  onclick="document.getElementById('titulo').innerHTML= tilde">ENVIAR</button>
                         </div>
                         </div>                
                 </div>                         
@@ -146,7 +146,7 @@
                             <input type="usuario" id="usuario1" name="usuario1" required="true"/>
                         </div>
                         <div class="elemento">
-                            <label for="number1">Telefono</label>
+                            <label for="number1">Teléfono</label>
                             <input type="number" id="number1" name="number1" required="true"/>
                         </div>
                         <div class="elemento">
@@ -155,7 +155,7 @@
                         </div></br>
                         <div class="elemento">
                             <h6 id="titulo2"></h6>
-                            <button id="boton"  onclick="document.getElementById('titulo2').innerHTML= tilde">Enviar</button>
+                            <button id="boton"  onclick="document.getElementById('titulo2').innerHTML= tilde">ENVIAR</button>
                         </div>
                         </div>                
                 </div>
@@ -199,7 +199,8 @@
                                                 <label class="form-check-label" for="inlineCheckbox1">3</label>
                                               </div>
                                               </div>
-                                              </div>                                    
+                                              </div>   
+                                            </br>                                 
                                     <h6 class="tituloFormularioChico">LEG 2</h6>
                                     <div class="elemento">
                                         <label for="Origen3">Origen</label>
@@ -234,6 +235,7 @@
                                               </div>
                                               </div>
                                               </div>
+                                            </br>  
                                     <h6 class="tituloFormularioChico">LEG 3</h6>
                                     <div class="elemento">
                                         <label for="Origen4">Origen</label>
@@ -266,7 +268,9 @@
                                                 <input class="form-check-input" name="genero" type="radio" id="inlineCheckbox1" value="option3">
                                                 <label class="form-check-label" for="inlineCheckbox1">3</label>
                                               </div>
+                                            </br>  
                                     <div id="leg4" style="display: none; width:100%;">
+                                    </br>  
                                     <h6 class="tituloFormularioChico">LEG 4</h6>
                                     <div class="elemento">
                                         <label for="Origen5">Origen</label>
@@ -302,6 +306,7 @@
                                     </div>
                                     </div>
                                     </div>
+                                </br>  
                                     <div id="leg5" style="display:none; width:100%;">
                                     <div style="width:100%;">
                                     <h6 class="tituloFormularioChico">LEG 5</h6>
@@ -340,6 +345,7 @@
                                     </div>
                                     </div>                                    
                                     </div>
+                                </br>  
                                     <div id="leg6" style="display: none; width:100%;">
                                     <div style="width:100%;">
                                     <h6 class="tituloFormularioChico">LEG 6</h6>
@@ -387,7 +393,7 @@
                             <input type="usuario" id="usuario2" name="usuario2" required="true"/>
                         </div>
                         <div class="elemento">
-                            <label for="Telefono2">Telefono</label>
+                            <label for="Telefono2">Teléfono</label>
                             <input type="password" id="Telefono2" name="Telefono2" required="true"/>
                         </div>
                         <div class="elemento">
@@ -396,9 +402,8 @@
                         </div></br>
                         <div class="elemento">
                             <h6 id="titulo3"></h6>
-                            <button id="boton"  onclick="document.getElementById('titulo3').innerHTML= tilde">Enviar</button>
-                        </div>
-        
+                            <button id="boton"  onclick="document.getElementById('titulo3').innerHTML= tilde">ENVIAR</button>
+                        </div>        
                     </div>
                     </form>
     </section>
