cambio nombre index.html

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                         </div>
                         <div class="elemento">
                             <label for="Correo Electronico1">Correo Electronico</label>
-                            <input type="contraseña" id="Correo Electronico1" name="Correo Electronico1" required="true"/>
+                            <input type="email" id="Correo Electronico1" name="Correo Electronico1" required="true"/>
                         </div></br>
                         <div class="elemento">
                             <h6 id="titulo2"></h6>
