--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </section>      
         
     <section id="planifica-tu-vuelo">
-        <form action="form">
+        <form name="formulario-vuelo" netlify>
         <div class="tabs">
             <input type="radio" class="tabs__radio" name="tabs-example" id="tab1" checked>
             <label for="tab1" class="tabs__label">SOLO IDA</label>
