--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         </div></br>
                         <div class="elemento">
                             <h6 id="titulo"></h6>
-                            <button id="boton"  onclick="document.getElementById('titulo').innerHTML= tilde">ENVIAR</button>
+                            <input type="submit" id="boton"  onclick="document.getElementById('titulo').innerHTML= tilde" value="ENVIAR"/>
                         </div>
                         </div>                
                 </div>                         
