--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <section id="sobre-nosotros">
         <div class="img-container" data-aos="zoom-in-left" id="sn">
         <h2>Sobre <span class="color-acento">Nosotros</span></h2>
-        <p>BONAIR ES UNA EMPRESA DE AVIACION EJECUTIVA DISEÑADA PARA BRINDAR UN SERVICIO ÚNICO.</br>DISPONIBILIDAD CONTINUA, NO IMPORTA QUE DIA Y HORARIO NOS NECESITES. AHI ESTAREMOS!</br>NOS ENFOCAMOS EN CADA DETALLE PARA GARANTIZARLE SU MEJOR EXPERIENCIA</p>
+        <p>BONAIR ES UNA EMPRESA DE AVIACION EJECUTIVA DISEÑADA PARA BRINDAR UN SERVICIO ÚNICO.</br>DISPONIBILIDAD CONTINUA, NO IMPORTA QUE DIA Y HORARIO NOS NECESITES. ¡AHI ESTAREMOS!</br>NOS ENFOCAMOS EN CADA DETALLE PARA GARANTIZARLE SU MEJOR EXPERIENCIA</p>
     </div>
     </section>
 
