--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     
+    
 </head>
     <title>onair</title>
     <link rel="icon" href="/b.png" type="image/png">
@@ -41,7 +42,7 @@
     <section id="sobre-nosotros">
         <div class="img-container" data-aos="zoom-in-left" id="sn">
         <h2>Sobre <span class="color-acento">Nosotros</span></h2>
-        <p>BONAIR ES UNA EMPRESA DE AVIACION EJECUTIVA DISEÑADA PARA BRINDAR UN SERVICIO ÚNICO.</br>DISPONIBILIDAD CONTINUA, NO IMPORTA QUE DIA Y HORARIO NOS NECESITES. ¡AHI ESTAREMOS!</br>NOS ENFOCAMOS EN CADA DETALLE PARA GARANTIZARLE SU MEJOR EXPERIENCIA</p>
+        <p>BONAIR ES UNA EMPRESA DE AVIACIÓN EJECUTIVA DISEÑADA PARA BRINDAR UN SERVICIO ÚNICO.</br>DISPONIBILIDAD CONTÍNUA, NO IMPORTA QUE DIA Y HORARIO NOS NECESITE. ¡AHÍ ESTAREMOS!</br>NOS ENFOCAMOS EN CADA DETALLE PARA GARANTIZARLE SU MEJOR EXPERIENCIA</p>
     </div>
     </section>
 
@@ -61,7 +62,7 @@
             <input type="radio" class="tabs__radio" name="tabs-example" id="tab1" checked>
             <label for="tab1" class="tabs__label">SOLO IDA</label>
             <div class="tabs__content">
-                <form name="formulario-solo-ida" action="/action_page.php" netlify> 
+                <form name="formulario-solo-ida" netlify> 
                 <div class="elemento">
                     <label for="Origen">Origen</label>
                     <input type="texto" id="Origen" name="Origen" required="true"/>
@@ -71,9 +72,9 @@
                     <input type="texto" id="Destino" name="Destino" required="true"/>
                 </div>
                 <div class="elemento">
-                    <label for="start">Dia y horario:</label><br>
-                    <input type="datetime-local" name="start" id="start" />
-                </div>                        
+                    <label for="start">Dia y horario:</label>
+                    <input type="datetime-local" id="start" name="start" required="true"/>
+                </div>                     
                 <div class="elemento">
                     <label for="Paxs">Cantidad de pasajeros</label>
                     <div class="elemento">
@@ -95,7 +96,7 @@
                             <input type="usuario" id="usuario" name="usuario" required="true"/>
                         </div>
                         <div class="elemento">
-                            <label for="number">Teléfono</label>
+                            <label for="number">Teléfono</label>                            
                             <input type="number" id="number" name="number" required="true"/>
                         </div>
                         <div class="elemento">
