--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     
-    
 </head>
     <title>onair</title>
     <link rel="icon" href="/b.png" type="image/png">
@@ -62,7 +61,7 @@
             <input type="radio" class="tabs__radio" name="tabs-example" id="tab1" checked>
             <label for="tab1" class="tabs__label">SOLO IDA</label>
             <div class="tabs__content">
-                <form name="formulario-solo-ida" netlify> 
+                <form name="formulario-solo-ida" action="/action_page.php" netlify> 
                 <div class="elemento">
                     <label for="Origen">Origen</label>
                     <input type="texto" id="Origen" name="Origen" required="true"/>
@@ -71,10 +70,8 @@
                     <label for="Destino">Destino</label>
                     <input type="texto" id="Destino" name="Destino" required="true"/>
                 </div>
-                <div class="elemento">
-                    <label for="start">Dia y horario:</label>
-                    <input type="datetime-local" id="start" name="start" required="true"/>
-                </div>                     
+                <label for="start">Dia y horario de consulta:</label><br>
+                <input type="Datetime-local" name="start" id="start" />                        
                 <div class="elemento">
                     <label for="Paxs">Cantidad de pasajeros</label>
                     <div class="elemento">
