--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <section id="nuestra-flota">
         <div class="img-container" data-aos="zoom-in-right" id="nf">
-            <h2>Nuestra <span class="color-acento">Aeronave</span></h2>
+            <h2>Nuestra <span class="color-acento"> Aeronave</h2>
             <h3>TECNAM P2006</h3>
                 <p>LIGHT TWIN</br>ORIGEN ITALIANO</br>MODELO 2022</br>POTENCIA 200HP</br>VELOCIDAD MAXIMA 269 KM/H</br>MAXIMO RANGO 1204KM</br>CARGA MAXIMA 411KG</br>CONFIGURACION PREMIUM PARA SU MAYOR CONFORT</br>MAXIMO 3 PASAJEROS</p>
         </div> 
