--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <label for="Destino">Destino</label>
                     <input type="texto" id="Destino" name="Destino" required="true"/>
                 </div>
-                <label for="start">Dia y horario de consulta:</label><br>
+                <label for="start">Dia y horario:</label><br>
                 <input type="Datetime-local" name="start" id="start" />                        
                 <div class="elemento">
                     <label for="Paxs">Cantidad de pasajeros</label>
